--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14080,14 +14080,14 @@ a.tag-addon:hover {
 }
 
 :root {
-  --primary-bg-color: #B90B0B;
+  --primary-bg-color: #38cab3;
   --primary-bg-hover: #5cd3b9;
-  --primary-bg-border: #B90B0B;
+  --primary-bg-border: #38cab3;
   --primary02: rgba(28, 213, 174, 0.2);
   --primary05: rgba(28, 213, 174, 0.5);
   --primary-transparentcolor: rgba(28, 213, 174, 0.2);
   --transparentprimary-transparentcolor: rgba(255, 255, 255, 0.05);
-  --transparent-body: #B90B0B;
+  --transparent-body: #38cab3;
   --transparent-theme: rgba(0, 0, 0, 0.1);
   --blue: $primary;
   --indigo: $primary;
@@ -34240,22 +34240,22 @@ slide is-expanded side-menu__item {
 }
 .rtl .popover-primary.bs-popover-start .popover-arrow::after,
 .rtl .popover-primary.bs-popover-auto[data-popper-placement^=start] .popover-arrow::after {
-  border-left-color: #B90B0B;
+  border-left-color: #38cab3;
 }
 .rtl .popover-primary.bs-popover-end .popover-arrow::after,
 .rtl .popover-primary.bs-popover-auto[data-popper-placement^=end] .popover-arrow::after {
-  border-right-color: #B90B0B;
+  border-right-color: #38cab3;
 }
 .rtl .popover-secondary .popover-header {
   padding: 0 0 15px;
 }
 .rtl .popover-secondary.bs-popover-start .popover-arrow::after,
 .rtl .popover-secondary.bs-popover-auto[data-popper-placement^=start] .popover-arrow::after {
-  border-left-color: #B90B0B;
+  border-left-color: #38cab3;
 }
 .rtl .popover-secondary.bs-popover-end .popover-arrow::after,
 .rtl .popover-secondary.bs-popover-auto[data-popper-placement^=end] .popover-arrow::after {
-  border-right-color: #B90B0B;
+  border-right-color: #38cab3;
 }
 .rtl .popover {
   right: 0;
@@ -34339,35 +34339,35 @@ slide is-expanded side-menu__item {
 }
 .rtl .tooltip-primary.bs-tooltip-start .tooltip-arrow::before,
 .rtl .tooltip-primary.bs-tooltip-auto[data-popper-placement^=start] .tooltip-arrow::before {
-  border-left-color: #B90B0B;
+  border-left-color: #38cab3;
 }
 .rtl .tooltip-primary.bs-tooltip-end .tooltip-arrow::before,
 .rtl .tooltip-primary.bs-tooltip-auto[data-popper-placement^=end] .tooltip-arrow::before {
-  border-right-color: #B90B0B;
+  border-right-color: #38cab3;
 }
 .rtl .tooltip-primary1.bs-tooltip-start .tooltip-arrow::before,
 .rtl .tooltip-primary1.bs-tooltip-auto[data-popper-placement^=start] .tooltip-arrow::before {
-  border-left-color: #B90B0B;
+  border-left-color: #38cab3;
 }
 .rtl .tooltip-primary1.bs-tooltip-end .tooltip-arrow::before,
 .rtl .tooltip-primary1.bs-tooltip-auto[data-popper-placement^=end] .tooltip-arrow::before {
-  border-right-color: #B90B0B;
+  border-right-color: #38cab3;
 }
 .rtl .tooltip-secondary.bs-tooltip-start .tooltip-arrow::before,
 .rtl .tooltip-secondary.bs-tooltip-auto[data-popper-placement^=start] .tooltip-arrow::before {
-  border-left-color: #B90B0B;
+  border-left-color: #38cab3;
 }
 .rtl .tooltip-secondary.bs-tooltip-end .tooltip-arrow::before,
 .rtl .tooltip-secondary.bs-tooltip-auto[data-popper-placement^=end] .tooltip-arrow::before {
-  border-right-color: #B90B0B;
+  border-right-color: #38cab3;
 }
 .rtl .tooltip-secondary1.bs-tooltip-start .tooltip-arrow::before,
 .rtl .tooltip-secondary1.bs-tooltip-auto[data-popper-placement^=start] .tooltip-arrow::before {
-  border-left-color: #B90B0B;
+  border-left-color: #38cab3;
 }
 .rtl .tooltip-secondary1.bs-tooltip-end .tooltip-arrow::before,
 .rtl .tooltip-secondary1.bs-tooltip-auto[data-popper-placement^=end] .tooltip-arrow::before {
-  border-right-color: #B90B0B;
+  border-right-color: #38cab3;
 }
 .rtl .tooltip {
   text-align: right;
@@ -38379,8 +38379,8 @@ slide is-expanded side-menu__item {
   margin-right: -1px;
 }
 .rtl .irs-modern .irs-slider::before {
-  border-right: 1px solid #B90B0B;
-  border-left: 1px solid #B90B0B;
+  border-right: 1px solid #38cab3;
+  border-left: 1px solid #38cab3;
   margin-right: -2px;
 }
 .rtl .irs-outline .irs-slider::before {
@@ -38636,7 +38636,7 @@ slide is-expanded side-menu__item {
   left: 0;
 }
 .rtl .main-chat-list .media.selected {
-  border-right: 1px solid #B90B0B;
+  border-right: 1px solid #38cab3;
   border-left: inherit;
 }
 .rtl .main-chat-list .main-img-user span {
@@ -38767,7 +38767,7 @@ slide is-expanded side-menu__item {
   right: inherit;
 }
 .rtl .main-msg-wrapper.left:nth-child(1):before {
-  border-left-color: #B90B0B;
+  border-left-color: #38cab3;
 }
 .rtl .main-msg-wrapper.left:nth-child(1):after {
   border-left-color: var(--primary02);
@@ -38815,7 +38815,7 @@ slide is-expanded side-menu__item {
   left: 0;
 }
 .rtl .main-contact-item.selected {
-  border-left-color: #B90B0B;
+  border-left-color: #38cab3;
 }
 .rtl .main-contact-body {
   margin-right: 15px;
@@ -38944,7 +38944,7 @@ slide is-expanded side-menu__item {
   margin-right: 15px;
 }
 .rtl .main-invoice-list .selected {
-  border-left-color: #B90B0B;
+  border-left-color: #38cab3;
 }
 .rtl .main-content-mail .container,
 .rtl .main-content-mail .container-fluid {
@@ -39231,7 +39231,7 @@ slide is-expanded side-menu__item {
   border-bottom-right-radius: 5px !important;
 }
 .rtl .border-start-primary {
-  border-left-color: #B90B0B !important;
+  border-left-color: #38cab3 !important;
 }
 .rtl .border-start-success {
   border-left-color: #1a9c86 !important;
@@ -101676,12 +101676,12 @@ a.text-dark:hover, a.text-dark:focus {
 
 
 .live-indicator6 {
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    color: green;
-    margin-top: -25px;
-    margin-left: 210px;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: green;
+  margin-top: -25px;
+  margin-left: 210px;
 }
 .live-indicator6 .dot {
   height: 10px;
@@ -101704,4 +101704,24 @@ a.text-dark:hover, a.text-dark:focus {
   top: 18px;
   border-radius: 5px;
   right: 40px;
+}
+.main-dwara-heading{
+  margin-top: 6px;
+}
+.live-indicator7  {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: green;
+  /* margin-top: -25px; */
+  /* margin-left: 210px; */
+}
+.live-indicator7 .dot {
+  height: 10px;
+  width: 10px;
+  background-color: green;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 5px;
+  animation: blink 1s infinite;
 }
